<resources>
    <string name="app_name" translatable="false">ReviewCheck</string>
    <string name="url">Amazon-URL</string>
    <string name="ok">OK</string>
    <string name="search_history">Request History</string>
    <string name="no_URL_Entered">No URL entered</string>
    <string name="no_internet_connection">No internet connection</string>
    <string name="not_a_url">Not a URL!</string>
    <string name="url_auto_entered">URL has automatically been filled in</string>
    <string name="no_ASIN_found">No ASIN found in URL</string>
    <string name="cnd_SearchHistory">search history</string>
    <string name="clear_history">Clear History</string>
    <string name="history_cleared">History was cleared</string>
    <string name="FAQ">F.A.Q</string>
    <string name="information">Information</string>
    <string name="faq_internet_permission"><b>Why does \"ReviewCheck\" need permissions for internet?</b>\nInternet permissions are required to get the adjusted reviews and the detailed information to your phone.</string>
    <string name="faq_no_full_information"><b>Why is there no information available for certain products?</b>\nThat happens when a product is new or hasn\'t been analyzed yet. This should be done shortly when having the full review open.</string>
    <string name="Privacy">Privacy</string>
    <string name="privacy_text">ReviewCheck itself doesn\'t store personal any data on any other device than your current device.\nThe data that\'s stored on this device is only your Search history, which you can delete if you wish so.\nWe also use the ReviewMeta API where we get the adjusted reviews. In part of the request we only send the product\'s ASIN which is only for the specific product.\nAnyway we recommend to check out the privacy policy which ReviewMeta.com has.\nhttps://reviewmeta.com/blog/privacy/</string>
    <string name="Important_header">Important</string>
    <string name="important_text"><b>ReviewCheck</b> does NOT get developed, funded or sponsored by <b>ReviewMeta</b> in any way.\nReviewCheck is just using the public ReviewMeta API.\n\nReviewCheck is not affiliated with any vendor, manifacturer or platform which are shown in this app.\n\nThere is no right that the information shown in this app is correctly shown.</string>
    <string name="Copyright_header">© Copyright</string>
    <string name="copyright_reviewCheck"><b>ReviewCheck</b> is developed and poperty  of <b>Project Whitespace</b>. The logo and code is property by ProjectWhitespace but made open-source under \"Mozilla Public License 2.0\".\nThe source code can be seen on this GitHub Repository.\nhttps://github.com/MrMinemeet/ReviewCheck\nhttps://www.ProjectWhitespace.net\n</string>
    <string name="copyright_reviewMeta"><b>ReviewMeta</b> is property of <b>Review Honesty Inc.</b>. The Logo and the information shown corrisponds to the legal owner. https://reviewmeta.com/</string>
    <string name="error_loading">Error loading requested product</string>
</resources>
